--- a/package.json
+++ b/package.json
@@ -4,34 +4,34 @@
   "version": "0.1.0",
   "author": "jonidelv",
   "dependencies": {
-    "dom-to-image": "^2.5.2",
-    "gh-pages": "^1.0.0",
-    "prop-types": "^15.5.0",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
-    "react-redux": "^5.0.5",
-    "react-router-dom": "^4.1.1",
-    "recompose": "^0.23.4",
-    "redux": "^3.6.0",
-    "redux-actions": "^2.0.3",
-    "redux-devtools-extension": "^2.13.0",
-    "redux-thunk": "^2.2.0",
-    "reselect": "^3.0.1",
-    "styled-components": "^2.0.0",
-    "styled-components-theme": "^1.0.5"
+    "dom-to-image": "2.5.2",
+    "gh-pages": "1.0.0",
+    "prop-types": "15.5.0",
+    "react": "15.5.4",
+    "react-dom": "15.5.4",
+    "react-redux": "5.0.5",
+    "react-router-dom": "4.1.1",
+    "recompose": "0.23.4",
+    "redux": "3.6.0",
+    "redux-actions": "2.0.3",
+    "redux-devtools-extension": "2.13.0",
+    "redux-thunk": "2.2.0",
+    "reselect": "3.0.1",
+    "styled-components": "2.0.0",
+    "styled-components-theme": "1.0.5"
   },
   "devDependencies": {
-    "babel-eslint": "^7.2.3",
-    "eslint": "^3.19.0",
-    "eslint-config-react-app": "^1.0.1",
-    "eslint-plugin-flowtype": "^2.33.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^5.0.1",
-    "eslint-plugin-react": "^7.0.1",
-    "husky": "^0.13.3",
-    "jest-cli": "^20.0.4",
-    "node-plop": "^0.5.5",
-    "plop": "^1.7.4",
+    "babel-eslint": "7.2.3",
+    "eslint": "3.19.0",
+    "eslint-config-react-app": "1.0.1",
+    "eslint-plugin-flowtype": "2.33.0",
+    "eslint-plugin-import": "2.2.0",
+    "eslint-plugin-jsx-a11y": "5.0.1",
+    "eslint-plugin-react": "7.0.1",
+    "husky": "0.13.3",
+    "jest-cli": "20.0.4",
+    "node-plop": "0.5.5",
+    "plop": "1.7.4",
     "react-scripts": "1.0.2"
   },
   "scripts": {
